; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid.c_grid_check_y.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid.c_grid_check_y.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i64, i64 }

@.str = private unnamed_addr constant [23 x i8] c"%s: y out of range: %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grid*, i8*, i64)* @grid_check_y to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grid_check_y(%struct.grid* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.grid*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store %struct.grid* %0, %struct.grid** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.grid*, %struct.grid** %5, align 8
  %10 = getelementptr inbounds %struct.grid, %struct.grid* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.grid*, %struct.grid** %5, align 8
  %13 = getelementptr inbounds %struct.grid, %struct.grid* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %11, %14
  %16 = icmp sge i64 %8, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = load i8*, i8** %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = call i32 @log_debug(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %18, i64 %19)
  store i32 -1, i32* %4, align 4
  br label %22

21:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %17
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @log_debug(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
